k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trypod
  name: trypod
  namespace: trypod
spec:
  nodeSelector:
    "beta.kubernetes.io/os": linux
  replicas: 1
  selector:
    matchLabels:
      app: trypod
  template:
    metadata:
      labels:
        app: trypod
    spec:
      containers:
      - image: postinstall/trypod:latest
        imagePullPolicy: Always
        name: trypod
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
