k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trypod
  namespace: trypod
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: trypod
