k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trypod
  namespace: trypod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: trypod.k8spoc01.gfi.ihk.de
    http:
      paths:
      - path: /
        backend:
          serviceName: trypod
          servicePort: 80
